<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Watch In</string>
    <string name="title_section1">Main Menu</string>
    <string name="title_section2">Add Family</string>
    <string name="title_section3">Inbox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <string name="item_detail_title">Item Name</string>
    <string name="error_title">Oops Sorry !</string>
    <string name="item_detail_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse"</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="title_activity_add_promotion">AddPromotion</string>
    <string name="approve_promotion_title_promotion">Enter Promotional Code:</string>
    <string name="approve_approve_promotion">Approve Code</string>
    <string name="broadcast_title_broadcast">Broadcast Message</string>
    <string name="broadcast_button">Send Broadcast</string>
    <string name="item_detail_edit_button">Edit Items</string>
    <string name="item_detail_delete_item">Delete Item</string>
    <string name="item_detail_upload_button">Upload Image</string>
    <string name="item_detail_get_image">Get Image</string>
    <string name="top_items_add_button">Add Items</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="add_promotion_get_image">Get Image</string>
    <string name="add_promotion_submit">Submit</string>
    <string name="edit_promotion_delete">Delete</string>
    <string name="login_error_message">Login Error Please input the correct credential of the user</string>
    <string name="login_error_title">Error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="friend_information_hint">Please input family username</string>
    <string name="friend_information_imagebutton_desc">Image button friend image</string>
    <string name="friend_information_friend_list_title">Family List</string>
    <string name="title_activity_friend_information">Family Information</string>
    <string name="add_friend_button_follow">Follow</string>
    <string name="add_friend_username">Username</string>
    <string name="title_activity_add_friend">Add Family</string>
    <string name="image_description_testing">Testing image desc</string>
    <string name="friend_relation_status">Follow</string>
    <string name="home_username">User name</string>
    <string name="home_recent_activity_title">User recent activity</string>
    <string name="title_activity_friend_detail">Family Detail</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_watch_me">Watch Me</string>
    <string name="watch_me_spinner_title">Time Reminder</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Your Name</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_error_message">Make sure you enter a username, email and password</string>
    <string name="signup_error_title">Sign Up Error</string>

    <string-array name="time_arrays">
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string name="title_activity_check_in">CheckIn</string>
    <string name="title_activity_danger">Help is Coming !!</string>
    <string name="title_activity_sign_up">Sign Up</string>

</resources>