<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.storein.FriendDetail$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" >

            <Button
                android:id="@+id/buttonStatus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/friendUserName"
                android:layout_marginTop="20dp"
                android:text="@string/friend_relation_status" />

            <com.parse.ParseImageView
                android:id="@+id/friendProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description_testing"
                android:padding="10dp" />

            <TextView
                android:id="@+id/friendUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_toRightOf="@+id/friendProfilePicture"
                android:text="@string/home_username"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" >

            <TextView
                android:id="@+id/textRecentActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:text="@string/home_recent_activity_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>